crates/mpl-lang/tests/errors/cumulative_histogram_no_conversion.mpl
test:http_request_duration_seconds_bucket
| where code == #/[123]../
| bucket by method, path to 5m using interpolate_cumulative_histogram(sum, 0.90, 0.99)
